--- a/LAB4/index.html
+++ b/LAB4/index.html
@@ -13,6 +13,7 @@
         text-align: center;
         padding-top: 100px;
     }
+
     .item_title {
         font-size: 30px;
         font-weight: bold;
@@ -23,10 +24,6 @@
         font-style: italic;
         font-size: 22px;
         margin-bottom: 50px;
-    }
-
-    #number {
-        width: 300px;
     }
 
     input,
@@ -55,42 +52,35 @@
         display: none;
     }
 
-    table {
+    /* ================================================================ */
+    .checkbox_wrap {
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+    }
+
+    .second_checkboxes {
+        width: 250px;
         margin: 0 auto;
-        border-spacing: 0;
+        flex-direction: column;
+        align-items: start;
     }
 
-    table th {
-        padding: 10px;
-        background-color: lightgray;
+    #result2 {
         border: 1px solid #000;
-    }
-
-    table td {
+        padding: 3px;
+        font-size: 20px;
         text-align: left;
-        padding: 10px;
-        border: 1px solid #000;
+        min-height: 23px;
     }
 
-    .table_result {
-        border-bottom: none;
-        border-top: none;
+    #options {
+        width: 200px;
+        margin: 0 auto;
+        text-align: left;
     }
-
-    #table_result1 {
-        border-top: 1px solid #000;
-    }
-
-    #table_result3 {
-        border-bottom: 1px solid #000;
-    }
-
-    .buttons_wrap {
-        padding: 10px;
-        background-color: burlywood;
-        margin: 20px auto;
-        width: 600px;
-
+    #task3 {
+        display: none;
     }
 </style>
 
@@ -98,11 +88,22 @@
     <div class="wrapper">
         <div class="wrapper_item">
             <div class="item_title">Завдання №1</div>
-            <div class="item_subtitle">Буде текст завдання</div>
+            <div class="item_subtitle">Вивести в рядок значення вибраних елементів</div>
             <form class="forma" action="">
-                <textarea rows="5" cols="100" id="set_text_fontsize" placeholder="Введіть текст"></textarea>
-                <br><br>
-                <input type="number" id="set_fontsize" placeholder="Введіть розмір шрифту">
+                <div class="checkbox_wrap">
+                    <div class="checkbox_item">
+                        <input type="checkbox" value="Ukrainian" id="check_string1" class="checkbox_input1">
+                        <label for="check_string1" class="check_title">Ukrainian</label>
+                    </div>
+                    <div class="checkbox_item">
+                        <input type="checkbox" value="English" id="check_string2" class="checkbox_input1">
+                        <label for="check_string2" class="check_title">English</label>
+                    </div>
+                    <div class="checkbox_item">
+                        <input type="checkbox" value="Spanish" id="check_string3" class="checkbox_input1">
+                        <label for="check_string3" class="check_title">Spanish</label>
+                    </div>
+                </div>
                 <br><br>
                 <button id="start1">Виконати</button>
                 <br><br>
@@ -114,18 +115,55 @@
         <hr class="next"><br><br>
 
 
-        <!-- <div class="wrapper_item">
+        <div class="wrapper_item">
             <div class="item_title">Завдання №2</div>
-            <div class="item_subtitle">Вивід рядків у таблицю</div>
+            <div class="item_subtitle">Вивести в рядок вибранні email</div>
             <form class="forma" action="">
-                <textarea rows="5" cols="50" id="set_string" placeholder="Введіть текст"></textarea>
-                <br><br>
-                <button id="start2">Виконати</button>
+                <div class="checkbox_wrap second_checkboxes">
+                    <div class="checkbox_item">
+                        <input type="checkbox" value="mountain@gmail.com" id="check_string1" class="checkbox_input2">
+                        <label for="check_string1" class="check_title">mountain@gmail.com</label>
+                    </div>
+                    <div class="checkbox_item">
+                        <input type="checkbox" value="tree@gmail.com" id="check_string2" class="checkbox_input2">
+                        <label for="check_string2" class="check_title">tree@gmail.com</label>
+                    </div>
+                    <div class="checkbox_item">
+                        <input type="checkbox" value="world@gmail.com" id="check_string3" class="checkbox_input2">
+                        <label for="check_string3" class="check_title">world@gmail.com</label>
+                    </div>
+                    <div class="checkbox_item">
+                        <input type="checkbox" value="cloud@gmail.com" id="check_string4" class="checkbox_input2">
+                        <label for="check_string4" class="check_title">cloud@gmail.com</label>
+                    </div>
+                    <div class="checkbox_item">
+                        <input type="checkbox" value="river@gmail.com" id="check_string5" class="checkbox_input2">
+                        <label for="check_string5" class="check_title">river@gmail.com</label>
+                    </div>
+                    <div class="checkbox_item">
+                        <input type="checkbox" value="wood@gmail.com" id="check_string6" class="checkbox_input2">
+                        <label for="check_string6" class="check_title">wood@gmail.com</label>
+                    </div>
+                    <div class="checkbox_item">
+                        <input type="checkbox" value="field@gmail.com" id="check_string7" class="checkbox_input2">
+                        <label for="check_string7" class="check_title">field@gmail.com</label>
+                    </div>
+                    <div class="checkbox_item">
+                        <input type="checkbox" value="snow@gmail.com" id="check_string8" class="checkbox_input2">
+                        <label for="check_string8" class="check_title">snow@gmail.com</label>
+                    </div>
+                    <div class="checkbox_item">
+                        <input type="checkbox" value="rain@gmail.com" id="check_string9" class="checkbox_input2">
+                        <label for="check_string9" class="check_title">rain@gmail.com</label>
+                    </div>
+                    <div class="checkbox_item">
+                        <input type="checkbox" value="wind@gmail.com" id="check_string10" class="checkbox_input2">
+                        <label for="check_string10" class="check_title">wind@gmail.com</label>
+                    </div>
+                </div>
                 <br><br>
                 <hr><br><br>
-                <table id="result2">
-                    <tr></tr>
-                </table>
+                <div id="result2"></div>
             </form>
         </div>
         <br><br>
@@ -134,158 +172,22 @@
 
         <div class="wrapper_item">
             <div class="item_title">Завдання №3</div>
-            <div class="item_subtitle">Створення заголовків &lt;h2&gt;</div>
-            <form class="forma" action="">
-                <input type="number" id="set_quantity_title" placeholder="Введіть кількість заголовків &lt;h2&gt;"
-                    style="width: 300px;">
+            <div class="item_subtitle">Перевірка знань таблиці множення</div>
+            <button id="start3">Почати перевірку</button>
+            <form id="task3" class="forma" action="">
+                <label id="score"></label>
                 <br><br>
-                <button id="start3">Виконати</button>
+                <button id="nextTask">Наступне завдання</button>
                 <br><br>
-                <hr><br><br>
-                <div id="result3"></div>
+                <label id="task"></label>
+                <br><br>
+                <div id="options"></div>
+                <br><br>
+                <label id="result3"></label>
             </form>
         </div>
         <br><br>
         <hr class="next"><br><br>
-
-
-        <div class="wrapper_item">
-            <div class="item_title">Завдання №4</div>
-            <div class="item_subtitle">Операції із параметрами функції</div>
-            <form class="forma" action="">
-                <textarea rows="5" cols="50" id="set_arguments"
-                    placeholder="Введіть аргументи через кому">Jane, 1, 3, like, 5, 9, read, 4, book</textarea>
-                <br><br>
-                <button id="start4">Виконати</button>
-                <br><br>
-                <hr><br><br>
-                <label id="result4"></label>
-            </form>
-        </div>
-        <br><br>
-        <hr class="next"><br><br>
-
-
-        <div class="wrapper_item">
-            <div class="item_title">Завдання №5</div>
-            <div class="item_subtitle">Виведення поточної дати</div>
-            <form class="forma" action="">
-                <table class="table_task5">
-                    <tr>
-                        <th>Завдання</th>
-                        <th></th>
-                        <th>Результат</th>
-                    </tr>
-                    <tr>
-                        <td rowspan="3">Виведення поточної дати та часу</td>
-                        <td rowspan="3">
-                            <button id="start5">Виконати</button>
-                        </td>
-                        <td id="table_result1" class="table_result">Дата: </td>
-                    </tr>
-                    <tr>
-                        <td id="table_result2" class="table_result">День: </td>
-                    </tr>
-                    <tr>
-                        <td id="table_result3" class="table_result">Час: </td>
-                    </tr>
-                </table>
-            </form>
-        </div>
-        <br><br>
-        <hr class="next"><br><br>
-
-
-        <div class="wrapper_item">
-            <div class="item_title">Завдання №6</div>
-            <div class="item_subtitle">Публікація дати</div>
-            <form class="forma" action="">
-                <textarea rows="2" cols="50" id="set_date"
-                    placeholder="Введіть дату у форматі: дд.мм.рррр або дд/мм/рррр або дд-мм-рррр"></textarea>
-                <br><br>
-                <div class="buttons_wrap">
-                    <button id="addDateToArea1">18.03.2024</button>
-                    <button id="addDateToArea2">17/03/2024</button>
-                    <button id="addDateToArea3">12-03-2024</button>
-                    <button id="addDateToArea4">01-03-2024</button>
-                </div>
-                <button id="start6">Виконати</button>
-                <br><br>
-                <hr><br><br>
-                <label id="result6"></label>
-            </form>
-        </div>
-        <br><br>
-        <hr class="next"><br><br>
-
-
-        <div class="wrapper_item">
-            <div class="item_title">Завдання №7</div>
-            <div class="item_subtitle">Знаходження всіх дат у тексті у форматі РРРР-ММ-ДД</div>
-            <form class="forma" action="">
-                <textarea rows="5" cols="70" id="set_text_date"
-                    placeholder="Введіть текст із датами у форматі: 'РРРР-ММ-ДД'">Lorem ipsum dolor #33c00f sit amet consectetur adipisicing elit. Architecto 2024.07.22 veritatis, perferendis, 2004.03.17 excepturi ipsam quasi 1999.01.04 eius quaerat quidem quo, sunt repudiandae repellat dicta dolore laudantium 2023.12.31 facere voluptatibus consequuntur 2012.05.25 optio? Exercitationem, explicabo!</textarea>
-                <br><br>
-                <button id="start7">Виконати</button>
-                <br><br>
-                <hr><br><br>
-                <label id="result7"></label>
-            </form>
-        </div>
-        <br><br>
-        <hr class="next"><br><br>
-
-        <div class="wrapper_item">
-            <div class="item_title">Завдання №8</div>
-            <div class="item_subtitle">Конвертація в "camelCase"</div>
-            <form class="forma" action="">
-                <input style="width: 350px;" type="text" id="set_to_camel"
-                    placeholder="Введіть текст в стилі 'snake_case'">
-                <br><br>
-                <button id="start8">Конвертувати</button>
-                <br><br>
-                <hr><br><br>
-                <label id="result8"></label>
-            </form>
-        </div>
-        <br><br>
-        <hr class="next"><br><br>
-
-
-        <div class="wrapper_item">
-            <div class="item_title">Завдання №9</div>
-            <div class="item_subtitle">Конвертація в "snake_case"</div>
-            <form class="forma" action="">
-                <input style="width: 350px;" type="text" id="set_to_snake"
-                    placeholder="Введіть текст в стилі 'camelCase'">
-                <br><br>
-                <button id="start9">Конвертувати</button>
-                <br><br>
-                <hr><br><br>
-                <label id="result9"></label>
-            </form>
-        </div>
-        <br><br>
-        <hr class="next"><br><br>
-
-
-        <div class="wrapper_item">
-            <div class="item_title">Завдання №10</div>
-            <div class="item_subtitle">Знаходження кольору тексту у HEX-форматі</div>
-            <form class="forma" action="">
-                <textarea rows="5" cols="70" id="set_text_colors"
-                    placeholder="Введіть текст, у якому будуть написані коди кольорів у форматі hex">Lorem ipsum dolor #df12dd sit amet consectetur adipisicing elit. Architecto #33c00f veritatis, perferendis, #000 excepturi ipsam quasi #18b5aa eius quaerat quidem quo, sunt repudiandae repellat dicta dolore laudantium #18b facere voluptatibus #bb3 consequuntur #7933bb optio? Exercitationem, #b33 explicabo!</textarea>
-                <br><br>
-                <button id="start10">Виконати</button>
-                <br><br>
-                <hr><br><br>
-                <label id="result10"></label>
-            </form>
-        </div>
-        <br><br>
-        <hr class="next"><br><br> -->
-
-        
     </div>
     <script src="main.js"></script>
 </body>
