--- a/LAB4/index.html
+++ b/LAB4/index.html
@@ -79,7 +79,8 @@
         margin: 0 auto;
         text-align: left;
     }
-    #task3 {
+    #task3,
+    #task4 {
         display: none;
     }
 </style>
@@ -184,6 +185,26 @@
                 <div id="options"></div>
                 <br><br>
                 <label id="result3"></label>
+            </form>
+        </div>
+        <br><br>
+        <hr class="next"><br><br>
+
+
+        <div class="wrapper_item">
+            <div class="item_title">Завдання №4</div>
+            <div class="item_subtitle">Перевірка знань таблиці множення (ввести значення)</div>
+            <button id="start4">Почати перевірку</button>
+            <form id="task4" class="forma" action="">
+                <label id="score2"></label>
+                <br><br>
+                <button id="nextTask2">Наступне завдання</button>
+                <br><br>
+                <label id="task2"></label>
+                <br><br>
+                <input type="number" id="answer" placeholder="Введіть вашу відповідь">
+                <br><br>
+                <label id="result4"></label>
             </form>
         </div>
         <br><br>
