Начал 4 задание, остался фикс кнопки некстТаск2

--- a/LAB4/index.html
+++ b/LAB4/index.html
@@ -176,11 +176,11 @@
             <div class="item_subtitle">Перевірка знань таблиці множення</div>
             <button id="start3">Почати перевірку</button>
             <form id="task3" class="forma" action="">
-                <label id="score"></label>
+                <label id="score1"></label>
                 <br><br>
-                <button id="nextTask">Наступне завдання</button>
+                <button id="nextTask1">Наступне завдання</button>
                 <br><br>
-                <label id="task"></label>
+                <label id="task1"></label>
                 <br><br>
                 <div id="options"></div>
                 <br><br>
@@ -203,6 +203,7 @@
                 <label id="task2"></label>
                 <br><br>
                 <input type="number" id="answer" placeholder="Введіть вашу відповідь">
+                <button id="check_answer">Перевірити</button>
                 <br><br>
                 <label id="result4"></label>
             </form>
