--- a/LAB4/index.html
+++ b/LAB4/index.html
@@ -7,6 +7,10 @@
     <title>Лабораторна робота №4</title>
 </head>
 <style>
+    * {
+        box-sizing: border-box;
+    }
+
     .wrapper {
         width: 100%;
         height: 100%;
@@ -79,9 +83,25 @@
         margin: 0 auto;
         text-align: left;
     }
+
     #task3,
     #task4 {
         display: none;
+    }
+
+    .gallery {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        justify-content: center;
+    }
+
+    .gallery_item {
+        width: 300px;
+    }
+    .inactive {
+        filter: grayscale(100%);
+        opacity: 50%;
     }
 </style>
 
@@ -207,6 +227,46 @@
                 <br><br>
                 <label id="result4"></label>
             </form>
+        </div>
+        <br><br>
+        <hr class="next"><br><br>
+
+
+        <div class="wrapper_item">
+            <div class="item_title">Завдання №5</div>
+            <div class="item_subtitle">Галерея зображень</div>
+            <div class="gallery">
+                <img class="gallery_item"
+                    src="https://images.pexels.com/photos/301920/pexels-photo-301920.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    alt="">
+                <img class="gallery_item"
+                    src="https://images.pexels.com/photos/5427659/pexels-photo-5427659.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    alt="">
+                <img class="gallery_item"
+                    src="https://images.pexels.com/photos/5428012/pexels-photo-5428012.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    alt="">
+                <img class="gallery_item"
+                    src="https://images.pexels.com/photos/1925536/pexels-photo-1925536.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    alt="">
+                <img class="gallery_item"
+                    src="https://images.pexels.com/photos/1106468/pexels-photo-1106468.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    alt="">
+                <img class="gallery_item"
+                    src="https://images.pexels.com/photos/1326947/pexels-photo-1326947.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    alt="">
+                <img class="gallery_item"
+                    src="https://images.pexels.com/photos/247899/pexels-photo-247899.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    alt="">
+                <img class="gallery_item"
+                    src="https://images.pexels.com/photos/4144923/pexels-photo-4144923.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    alt="">
+                <img class="gallery_item"
+                    src="https://images.pexels.com/photos/159866/books-book-pages-read-literature-159866.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    alt="">
+                <img class="gallery_item"
+                    src="https://images.pexels.com/photos/351961/pexels-photo-351961.jpeg?auto=compress&cs=tinysrgb&w=600"
+                    alt="">
+            </div>
         </div>
         <br><br>
         <hr class="next"><br><br>
