--- a/LAB4/index.html
+++ b/LAB4/index.html
@@ -154,11 +154,88 @@
         max-width: 100%;
         height: auto;
     }
+
     .image_resize_wrap {
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 40px;
+    }
+
+    .products {
+        margin-bottom: 50px;
+    }
+
+    .products_list {
+        width: 300px;
+        font-size: 20px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin: 0 auto;
+        grid-gap: 0;
+    }
+
+    .product_title,
+    .product_buy,
+    .count_title,
+    .product_count {
+        border: 1px solid #000;
+        padding: 5px;
+    }
+
+    .product_buy_btn {
+        background-color: #4297ff85;
+        cursor: pointer;
+    }
+
+    .product_buy_btn.added {
+        background-color: #008CBA;
+        /* Синий цвет */
+    }
+
+    .products_title {
+        color: red;
+        font-weight: bold;
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+
+    .slider {
+        position: relative;
+        width: 500px;
+        overflow: hidden;
+        margin: 0 auto;
+    }
+
+    .slides {
+        display: flex;
+        transition: transform 0.5s ease;
+    }
+
+    .slides img {
+        width: 100%;
+    }
+
+    .slider_btn {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        background-color: #0a5cffb0;
+        border-color: #fff;
+        color: #fff;
+        font-weight: bold;
+    }
+
+    .prevBtn {
+        left: 10px;
+    }
+
+    .nextBtn {
+        right: 10px;
     }
 </style>
 
@@ -400,7 +477,71 @@
         <hr class="next"><br><br>
 
 
+        <div class="wrapper_item">
+            <div class="item_title">Завдання №9</div>
+            <div class="item_subtitle">Додавання товарів до кошика</div>
+            <div class="products">
+                <div class="products_title">Список товарів</div>
+                <div class="products_list">
+                    <div class="product_title">Брюки</div>
+                    <div class="product_buy">
+                        <button class="product_buy_btn">Замовити</button>
+                    </div>
+                    <div class="product_title">Сорочка</div>
+                    <div class="product_buy">
+                        <button class="product_buy_btn">Замовити</button>
+                    </div>
+                    <div class="product_title">Шорти</div>
+                    <div class="product_buy">
+                        <button class="product_buy_btn">Замовити</button>
+                    </div>
+                    <div class="product_title">Туфлі</div>
+                    <div class="product_buy">
+                        <button class="product_buy_btn">Замовити</button>
+                    </div>
+                </div>
+            </div>
+            <div class="basket">
+                <div class="products_title">Кошик товарів</div>
+                <div class="products_list">
+                    <div class="product_title">Товар</div>
+                    <div class="count_title">Кількість</div>
 
+                    <div class="product_title">Брюки</div>
+                    <div class="product_count">0</div>
+                    <div class="product_title">Сорочка</div>
+                    <div class="product_count">0</div>
+                    <div class="product_title">Шорти</div>
+                    <div class="product_count">0</div>
+                    <div class="product_title">Туфлі</div>
+                    <div class="product_count">0</div>
+
+                </div>
+            </div>
+        </div>
+        <br><br>
+        <hr class="next"><br><br>
+
+
+        <div class="wrapper_item">
+            <div class="item_title">Завдання №10</div>
+            <div class="item_subtitle">Слайдер світлин</div>
+            <div class="slider">
+                <div class="slides">
+                    <img src="https://images.pexels.com/photos/1106468/pexels-photo-1106468.jpeg?auto=compress&cs=tinysrgb&w=600"
+                        alt="Slide 1">
+                    <img src="https://images.pexels.com/photos/5427659/pexels-photo-5427659.jpeg?auto=compress&cs=tinysrgb&w=600"
+                        alt="Slide 2">
+                    <img src="https://images.pexels.com/photos/351961/pexels-photo-351961.jpeg?auto=compress&cs=tinysrgb&w=600"
+                        alt="Slide 3">
+                </div>
+                <button class="slider_btn prevBtn"><</button>
+                <button class="slider_btn nextBtn">></button>
+            </div>
+
+        </div>
+        <br><br>
+        <hr class="next"><br><br>
     </div>
     <script src="main.js"></script>
 </body>
