--- a/LAB6/index.html
+++ b/LAB6/index.html
@@ -75,6 +75,46 @@
         margin: 0 5px;
     }
 
+    .thumbnail {
+        width: 100px;
+        height: auto;
+        cursor: pointer;
+        margin: 5px;
+    }
+
+    .fullsize {
+        display: block;
+        margin: 20px 0;
+    }
+
+    .error {
+        color: red;
+    }
+
+    .palette {
+        width: 100%;
+        height: 50px;
+        margin-bottom: 10px;
+    }
+
+    .palette .color {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        border: 1px solid #000;
+        margin-right: 5px;
+    }
+
+    #dogGallery {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    #dogGallery img {
+        max-width: 300px;
+        margin: 10px;
+    }
 
     /* ================================================================ */
 </style>
@@ -127,6 +167,50 @@
         <br><br>
         <hr class="next"><br><br>
 
+
+        <div class="wrapper_item">
+            <div class="item_title">Завдання №3</div>
+            <div class="item_subtitle">Завантаження і перегляд зображень</div>
+            <input type="text" id="jsonInput" value='["file1.webp", "file2.webp", "file34.webp"]'>
+            <button id="showImagesButton">ПОКАЗАТИ</button>
+            <div id="message"></div>
+            <div id="thumbnailContainer"></div>
+            <div id="fullsizeContainer"></div>
+        </div>
+        <br><br>
+        <hr class="next"><br><br>
+
+
+        <div class="wrapper_item">
+            <div class="item_title">Завдання №4</div>
+            <div class="item_subtitle">Таблиця студентів</div>
+            <div class="students_table">
+
+            </div>
+        </div>
+        <br><br>
+        <hr class="next"><br><br>
+
+
+        <div class="wrapper_item">
+            <div class="item_title">Завдання №5</div>
+            <div class="item_subtitle">Малювання палітри</div>
+            <div class="palette"></div>
+            <button onclick="fillPaint()">Fill</button>
+            <button onclick="drawShape()">Draw</button>
+        </div>
+        <br><br>
+        <hr class="next"><br><br>
+
+
+        <div class="wrapper_item">
+            <div class="item_title">Завдання №6</div>
+            <div class="item_subtitle">Галерея собак</div>
+            <button id="loadDogs">Загрузить фотографии собак</button>
+            <div id="dogGallery"></div>
+        </div>
+        <br><br>
+        <hr class="next"><br><br>
     </div>
     <script src="main.js"></script>
 </body>
